--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,26 @@
 
 @theme {
   --color-tomato-red: #E94E77;
+  --color-custom-peach: #ef6151;
   --color-lime-green: #A3D55C;
   --color-honey-yellow: #FFB74D;
   --color-warm-beige: #F4E1C1;
   --color-dark-chocolate: #5C4033;
-  --breakpoint-2xl: '1440px';
+  --color-custom-white: hsl(255, 255, 255, 0.8) --breakpoint-2xl: 90rem;
   --font-roboto: "Roboto", sans-serif;
   --font-quicksand: 'Quicksand', sans-serif;
+  --breakpoint-tablet-sm: 40rem;
+  --breakpoint-tablet-lg: 56.25rem;
 }
 
 .custom-container {
-  @apply p-4 md:p-6 lg:p-8;
+  @apply p-4 lg:p-8 mx-auto;
+}
+
+.heading-text {
+  @apply font-roboto font-bold;
+}
+
+.subheading-text {
+  @apply font-quicksand;
 }
