--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
   --breakpoint-tablet-lg: 56.25rem;
 }
 
+
 .custom-container {
   @apply p-4 lg:p-8 mx-auto container;
 }
@@ -34,4 +35,8 @@
 
 .hover-scale {
   @apply cursor-pointer transition duration-300 ease-in-out hover:scale-110
+}
+
+.section-heading {
+  @apply font-roboto font-bold
 }
