--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
 }
 
 .custom-container {
-  @apply p-4 lg:p-8 mx-auto container;
+  @apply max-w-[1280px] p-4 lg:p-8 mx-auto container;
 }
 
 .heading-text {
