--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,7 @@
 .heading-size {
   @apply text-2xl md:text-3xl lg:text-4xl 2xl:text-5xl;
 }
+
+.thumbnail-zoom-hover {
+  @apply transition-transform duration-300 hover:scale-[1.02];
+}
