--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import "tailwindcss";
 
 @theme {
@@ -10,8 +10,8 @@
   --color-dark-chocolate: #5c4033;
   --color-custom-white: #333;
   --breakpoint-2xl: 90rem;
-  --font-roboto: "Roboto", sans-seriaaf;
-  --font-quicksand: "Quicksand", sans-serif;
+  --font-poppins: "Poppins", sans-serif;
+  --font-montserrat: "Montserrat", serif;
   --breakpoint-tablet-sm: 40rem;
   --breakpoint-tablet-lg: 56.25rem;
 }
@@ -25,11 +25,11 @@
 }
 
 .heading-text {
-  @apply font-roboto font-bold;
+  @apply font-poppins font-bold;
 }
 
 .subheading-text {
-  @apply font-quicksand;
+  @apply font-montserrat;
 }
 
 .heading-hover {
