--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,10 @@
   @apply transition duration-300;
 }
 
+.hover-underline {
+  @apply transition duration-300 hover:underline
+}
+
 .hover-scale {
   @apply cursor-pointer transition duration-300 ease-in-out hover:scale-110;
 }
