Added sign up page

--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@
 }
 
 .hover-underline {
-  @apply transition duration-300 hover:underline
+  @apply transition duration-300 hover:underline;
 }
 
 .hover-scale {
